--- a/account.html
+++ b/account.html
@@ -8,14 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class='body'>
+    <center>
     <h4>my fifth page</h4>
+    <img src="company.png"id="main-logo">
     <h2>You can as well</h2>
     <h1><b><i class='heading1'>JOIN US ON OUR ONLINE GROUPS</i></b></h1>
-    <h2>Kindly follow us through these groups</h2>
-    <h3>or you can send us a message on our email account</h3>
-    <P class='heading1'>Email: Ladiesand Men'sFashions82@gmail.com</P>
-    <p class='heading1'>Watsapp group:Cissy's Fashions</p>
-    <p class='heading1'>Facebook group:Cissy's Fashions</p>
+    </center>
+    <h2>Do you want to be updated every moment?</h2>
+    <h3>Here is the solution to that problem</h3>
+    <h2><i>Kindly follow us through these groups</i></h2>
+    <h3><i>so as you can be updated and you send a message on our email account</li></h3>
+    <center>
+    <P class='heading1'>EMAIL:</p>
+    <a href="a">LadiesandMen'sFashions82@gmail.com</a>
+    <p class='heading1'>Watsapp group:</p>
+    <a href="a">Cissy'Fashions</a>
+    <p class='heading1'>Facebook group:</p>
+    <a href="a">Cissy's Fashions</a>
+    <p class='heading1'>Youtube</p>
+    <a href="a">Cissy' Fashions Company</a>
+    <p>LOVE YOUR BODY AND LOOK GREAT</p>
+    <P>Fashion without Borders</P>
+
     <a href="shop.html">vist my shop with us page</a>
+    </center>
+    
 </body>
 </html>
