--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class='body'>
+    <center>
     <h4>my fouth page</h4>
+    <img src="company.png"id="main-logo">
     <h1>OR you can kindly</h1>
     <h1><b><i>Contact us using these lines</i></b></h1>
     <h2 class='heading1'>and we shall answer you and meet out your orders</h2>
@@ -21,5 +23,6 @@
     <P class='heading1'>Managing Director</P>
     <p class='heading1'>0753389482</p>
     <a href="account.html">vist my account page</a>
+    </center>
 </body>
 </html>
