--- a/location.html
+++ b/location.html
@@ -8,13 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class='body'>
+    <center>
     <h4>my third page</h4>
-    <h1>If your kindly want to meet us</h1>
+    
+    <h1><i>If you kindly want to see us</i></h1>
     <h2>at our Fashion Business company</h2>
+    <h2>Main branch (Kampala)</h2>
     <h2><b><i>We are located at;</i></b></h2>
     <p class='heading1'>Nakaseero plaza opposite bus park</p>
     <p class='heading1'>Plot F423,Nakaseero plaza Nakivubo road</p>
     <p class='heading1'>Shop:NO.B120</p>
+    <img src="building.jpeg"id="logo11">
+    </center>
+    <p>We have other branches</p>
+    <p>as they are listed down</p>
+    <ul class='heading1'>
+        <li>Masaka near the taxi park</li>
+        <li>Mukono opposite Uganda Martyrs University</li>
+        <li>Jinja near POP hotel</li>
+        <li>Mbarara off Lyatonde road</li>
+    </ul>
     <a href="contact.html">vist my contact page</a>
+    
 </body>
 </html>
