--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class='body'>
+    
     <h4>my second page</h4>
+    <img src="company.png"id='main-logo'>
     <h3 class='heading1'>Make all kinds of orders with us</h3>
     <h4 class='heading1'>we are ready to serve you faithfully</h4>
     <h4 class='heading1'>our lovely customers</h4>
@@ -20,6 +22,8 @@
       <li>Party wears</li>
       <li>All types of shoes</li>
     </ul>
+    <center>
+    <p>Dont forget that</p>
     <p class='heading1'><i><b>We hire all types of Bridals</b></i></p>
     <img src='wedding.jpg'id='logo4'>
     <img src='gomasi.jpg'id='logo5'>
@@ -29,7 +33,7 @@
     <img src='casul.jpg'id='logo3'>
     <img src='beach.jpg'id='logo7'>
     <a href="Location.html">vist my location page</a>
-
+</center>
 
 
 </body>
