--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
     <P class='heading1'>Managing Director</P>
     <p class='heading1'>0753389482</p>
     <a href="account.html">vist my account page</a>
+    <a href="contact.html">Go back to my contact page </a>
     </center>
 </body>
 </html>
