--- a/location.html
+++ b/location.html
@@ -29,6 +29,6 @@
         <li>Mbarara off Lyatonde road</li>
     </ul>
     <a href="contact.html">vist my contact page</a>
-    
-</body>
+    <a href="location.html">Go back to my location page</a>
+    </body>
 </html>
