--- a/sales.html
+++ b/sales.html
@@ -33,6 +33,7 @@
     <img src='casul.jpg'id='logo3'>
     <img src='beach.jpg'id='logo7'>
     <a href="Location.html">vist my location page</a>
+    <a href="sales.html">Go back to my sales page</a>
 </center>
 
 
