--- a/shop.html
+++ b/shop.html
@@ -56,6 +56,6 @@
     <h3>FASHION BUSINESS COMPANY</h3>
     <h2>(CLGFC)</h2>
     <h1 class='heading1'>IN GOD WE TRUST</h1>
-    
+    <a href="account.html">Go back to my account page</a>
 </body>
 </html>
